Bug: card gap on mobile
Fixes https://gitlab.com/undrr/web-backlog/-/issues/2031

--- a/stories/Components/Cards/Card/card.scss
+++ b/stories/Components/Cards/Card/card.scss
@@ -40,7 +40,6 @@
     color: $mg-color-neutral-800;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 300px 1fr auto;
     gap: $mg-spacing-100;
 
     .mg-card__content {
@@ -58,27 +57,32 @@
       }
     }
 
-    @media (min-width: $mg-breakpoint-mobile) {
-      grid-template-columns: 160px 1fr;
-      grid-template-rows: 1fr auto;
-    }
+    &:has(.mg-card__visual) {
+      grid-template-rows: 300px 1fr auto;
 
-    @media (min-width: $mg-breakpoint-tablet) {
-      grid-template-columns: 330px 1fr;
+      @media (min-width: $mg-breakpoint-mobile) {
+        grid-template-columns: 160px 1fr;
+        grid-template-rows: 1fr auto;
+      }
+
+      @media (min-width: $mg-breakpoint-tablet) {
+        grid-template-columns: 330px 1fr;
+      }
     }
   }
 
   &__hc.mg-card-book__hc {
-    grid-template-rows: 200px 1fr auto;
-
     .mg-card__visual {
       border: 1px solid rgba($mg-color-neutral-600, 0.2);
       overflow: hidden;
     }
 
-    @media (min-width: $mg-breakpoint-mobile) {
-      grid-template-columns: 160px 1fr;
-      grid-template-rows: 1fr auto;
+    &:has(.mg-card__visual) {
+      grid-template-rows: 200px 1fr auto;
+      @media (min-width: $mg-breakpoint-mobile) {
+        grid-template-columns: 160px 1fr;
+        grid-template-rows: 1fr auto;
+      }
     }
   }
 
